# yubiotp

./: .bumpversion.cfg  .coveragerc  .gitignore  .hgignore  .isort.cfg  CHANGES  CHANGES.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yaml
docs/: Makefile  automake.sh
docs/source/: .spell.utf-8.add  .spell.utf-8.add.spl  client.rst  conf.py  index.rst  otp.rst  utils.rst
src/yubiotp/: crc.py  modhex.py  otp.py
yubiotp/: client.py  crc.py  modhex.py  otp.py  test.py
yubiotp/cli/: yubiclient.py  yubikey.py
